# connect_four_bot

./: .gitmodules  connect4telewrap.cabal  stack.yaml
src/: Connect4Game.hs  I18N.hs  Main.hs  SpecConnect4Game.hs  Types.hs
