name:              connect4telewrap
version:           0.1
Build-Type:        Simple
cabal-version:     >= 1.2

executable connect4telewrap
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base, containers, text, telewrap, telegram-api,
                   aeson, aeson-pretty, bytestring, mtl